--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>${maven.war.version}</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-war</id>
