--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,7 @@
                 </executions>
             </plugin>
 
-<!--            <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.3</version>
@@ -201,18 +201,18 @@
                                     <artifactId>jetty-runner</artifactId>
                                     <version>9.3.8.v20160314</version>
                                     <destFileName>jetty-runner.jar</destFileName>
-                                    <outputDirectory>${project.build.directory}</outputDirectory>
+                                    <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty-maven.version}</version>
-            </plugin>-->
+            <!--<plugin>
+                 <groupId>org.eclipse.jetty</groupId>
+                 <artifactId>jetty-maven-plugin</artifactId>
+                 <version>${jetty-maven.version}</version>
+             </plugin>-->
 
         </plugins>
     </build>
