--- a/pom.xml
+++ b/pom.xml
@@ -197,11 +197,10 @@
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.eclipse.jetty</groupId>
-                                    <artifactId>jetty-runner</artifactId>
-                                    <version>9.3.8.v20160314</version>
-                                    <destFileName>jetty-runner.jar</destFileName>
-                                    <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
+                                    <groupId>com.github.jsimone</groupId>
+                                    <artifactId>webapp-runner</artifactId>
+                                    <version>8.0.30.2</version>
+                                    <destFileName>webapp-runner.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
