--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
         <maven.war.version>2.6</maven.war.version>
         <maven.dependency.version>2.10</maven.dependency.version>
         <jetty-maven.version>9.3.8.v20160314</jetty-maven.version>
-        <jetty-runner.version>9.3.8.v20160314</jetty-runner.version>
     </properties>
 
     <dependencies>
@@ -124,7 +123,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
     </dependencies>
 
     <repositories>
@@ -172,6 +171,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>${maven.war.version}</version>
                 <configuration>
+                    <warName>${project.name}</warName>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
                 <executions>
